--- a/style.css
+++ b/style.css
@@ -45,14 +45,37 @@ body{
 }
 
 .btn:link, .btn:visited{
-    background-color: #e67e22;
-    color: #fff;
+    display: inline-block;
     text-decoration: none;
     font-size: 2rem;
     padding: 1.6rem 3.2rem;
-    border-radius: 1.5rem;
+    border-radius: 0.9rem;
+    transition: all 0.3s;
+}
+
+.btn--full:link, .btn--full:visited{
+    background-color: #e67e22;
+    color: #fff;
+}
+
+.btn--full:hover, .btn--full:active{
+    background-color: #cf711f;
+}
+
+.btn--outline:link, .btn--outline:visited{
+    background-color: #fff;
+    color: #555;
+}
+
+.btn--outline:hover, .btn--outline:active{
+    background-color: #fdf2e9;
+    box-shadow: inset 0 0 0 0.3rem #fff;
 }
 
 .hero-img{
     width: 100%;
+}
+
+.margin-right-sm{
+    margin-right: 1.6rem !important;
 }
