--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 }
 
 body{
-    font-family: "Inter", sans-serif;
+    font-family: "Rubik", sans-serif;
     line-height: 1;
     font-weight: 400;
     color: #555;
@@ -48,6 +48,7 @@ body{
     display: inline-block;
     text-decoration: none;
     font-size: 2rem;
+    font-weight: 600;
     padding: 1.6rem 3.2rem;
     border-radius: 0.9rem;
     transition: all 0.3s;
@@ -78,4 +79,31 @@ body{
 
 .margin-right-sm{
     margin-right: 1.6rem !important;
+}
+
+.delivered-meals{
+   display: flex; 
+   align-items: center;
+   gap: 1.6rem;
+   margin-top: 8rem;
+}
+
+.delivered-imgs{
+    display: flex;    
+}
+
+.delivered-imgs img{
+    width: 4.8rem;
+    height: 4.8rem;
+    border-radius: 50%;
+    margin-right: -1.6rem;
+}
+
+.delivered-imgs img:last-child{
+    margin: 0;
+}
+
+.delivered-text{
+    font-size: 1.8rem;
+    font-weight: 600;
 }
