--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body{
     height: 4.8rem;
     border-radius: 50%;
     margin-right: -1.6rem;
+    border: 0.3rem solid #fdf2e9;
 }
 
 .delivered-imgs img:last-child{
@@ -106,4 +107,9 @@ body{
 .delivered-text{
     font-size: 1.8rem;
     font-weight: 600;
+}
+
+.delivered-text span{
+    color: #cf711f;
+    font-weight: 700; 
 }
