--- a/style.css
+++ b/style.css
@@ -19,6 +19,29 @@ body{
 /*       GENERAL COMPONENTS       */
 /* ------------------------------ */
 
+.container{
+    max-width: 120rem;
+    margin: 0 auto;
+    padding: 0 3.2rem;
+}
+
+.grid{
+    display: grid;
+    gap: 9.6rem;
+}
+
+.grid--2-col{
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-col{
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-col{
+    grid-template-columns: repeat(4, 1fr);
+}
+
 .heading-primary{
     font-size: 5.2rem;
     font-weight: 700;
@@ -183,24 +206,3 @@ body{
     padding: 9.6rem 0rem;
 }
 
-.container{
-    max-width: 120rem;
-    margin: 0 auto;
-}
-
-.grid{
-    display: grid;
-    gap: 9.6rem;
-}
-
-.grid--2-col{
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3-col{
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--4-col{
-    grid-template-columns: repeat(4, 1fr);
-}
