--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,3 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html{
-    font-size: 62.5%;
-}
-
-body{
-    font-family: "Rubik", sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
-}
-
-/* ------------------------------ */
-/*       GENERAL COMPONENTS       */
-/* ------------------------------ */
-
-.container{
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 0 3.2rem;
-}
-
-.grid{
-    display: grid;
-    gap: 9.6rem;
-}
-
-.grid--2-col{
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3-col{
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--4-col{
-    grid-template-columns: repeat(4, 1fr);
-}
-
-.heading-primary, .heading-secondary{
-    font-weight: 700;
-    color: #333;
-    letter-spacing: -0.5px;
-}
-
-.heading-primary{
-    font-size: 5.2rem;
-    line-height: 1.05;
-    margin-bottom: 3.2rem;
-}
-
-.heading-secondary{
-    font-size: 4.4rem;
-    line-height: 1.2;
-    margin-bottom: 9.6rem;
-}
-
-.subheading{
-    display: block;
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #cf711f;
-    text-transform: uppercase;
-    margin-bottom: 1.6rem;
-    letter-spacing: 0.75px;
-}
-
-.btn:link, .btn:visited{
-    display: inline-block;
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1.6rem 3.2rem;
-    border-radius: 0.9rem;
-    transition: all 0.3s;
-}
-
-.btn--full:link, .btn--full:visited{
-    background-color: #e67e22;
-    color: #fff;
-}
-
-.btn--full:hover, .btn--full:active{
-    background-color: #cf711f;
-}
-
-.btn--outline:link, .btn--outline:visited{
-    background-color: #fff;
-    color: #555;
-}
-
-.btn--outline:hover, .btn--outline:active{
-    background-color: #fdf2e9;
-    box-shadow: inset 0 0 0 0.3rem #fff;
-}
-
-.margin-right-sm{
-    margin-right: 1.6rem !important;
-}
-
 /* ------------------------------ */
 /*             HEADER             */
 /* ------------------------------ */
@@ -225,7 +120,25 @@ body{
     padding: 9.6rem 0rem;
 }
 
+.step-number{
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: #ddd;  
+    margin-bottom: 1.2rem; 
+}
+
+.step-description{
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+.step-img-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .step-img{
-    width: 50%;
+    width: 30%;
 }
 
