add circle behind the photo

--- a/css/general.css
+++ b/css/general.css
@@ -27,7 +27,8 @@ body{
 
 .grid{
     display: grid;
-    gap: 9.6rem;
+    column-gap: 6.4rem;
+    row-gap: 9.6rem;
 }
 
 .grid--2-col{
@@ -40,6 +41,10 @@ body{
 
 .grid--4-col{
     grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--center-v{
+    align-items: center;    
 }
 
 .heading-primary, .heading-secondary, .heading-tertiary{
