Pricing section part1

--- a/css/style.css
+++ b/css/style.css
@@ -367,4 +367,12 @@
     transform: scale(1.1);
 }
 
+/* ------------------------------ */
+/*       PRICING SECTION          */
+/* ------------------------------ */
+
+.section-pricing{
+    padding: 9.6rem 0rem;
+}
+
 
