--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,10 @@
     padding: 9.6rem 0rem;
 }
 
+.pricing-plan{
+    background-color: #fdf2e9;
+}
+
 .plan-header{
     text-align: center;
     margin-bottom: 4.8rem;
