--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,9 @@
 
 .pricing-plan{
     background-color: #fdf2e9;
+    border-radius: 1.1rem;
+    padding: 4.8rem;
+    width: 75%;
 }
 
 .plan-header{
