--- a/css/general.css
+++ b/css/general.css
@@ -113,6 +113,18 @@ body{
     box-shadow: inset 0 0 0 0.3rem #fff;
 }
 
+.btn--form{
+    background-color: #45260a;
+    color: #fdf2e9;
+    align-self: end;
+    padding: 1.2rem ;
+}
+
+.btn--form:hover{
+    background-color: #fff;
+    color: #555;
+}
+
 .link:visited, .link:link{
     display: inline-block;
     color: #e67e22;
