--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,56 @@
     overflow: hidden;
 }
 
-.cta-text-box{}
+.cta-text-box{
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+    color: #45260a;
+}
+
+.cta .heading-secondary{
+    color: #45260a;
+    margin-bottom: 3.2rem;
+}
+
+.cta-text{
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
+}
+
+.cta-form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap: 2.4rem;
+}
+
+.cta-form label{
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 1.2rem;
+}
+
+.cta-form input, .cta-form select{
+    width: 100%;
+    padding: 1.2rem;
+    font-size: 1.8rem;
+    font-family: inherit;
+    color: inherit;
+    border: none;
+    background-color: #fdf2e9;
+    border-radius: 9px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.cta-form input::placeholder{
+    color: #aaa;
+}
+
+.cta *:focus{
+    outline: none;
+    box-shadow: 0 0 0 0.8rem rgb(253, 242, 233, 0.5);
+}
 
 .cta-img-box{
     background-image:linear-gradient(to right bottom, rgb(235, 152, 78, 0.35) , rgb(230, 126, 34, 0.35)), url('../img/eating.jpg');
@@ -485,6 +534,5 @@
     background-size: cover;
 }
 
-.cta-form{}
 
 
